@@ -8,6 +8,7 @@ Changes in 3.3.4
     - Enable overlay ops short-circuits (#542)
     - Envelope-based short-circuit for symDifference (#543)
     - Fix support for PHP 5.4 (#513)
+    - Fix TopologyPreservingSimplifier invalid output on closed line (#508)
 
 Changes in 3.3.3
 2012-04-01
